--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 
 a { 
   text-decoration: none;
-  color: #999;
+  color: #33ba91;
 }
 
 a:hover { text-decoration: underline; }
@@ -32,7 +32,7 @@ nav ul, footer ul {
 
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
-footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
+footer { border-top: 1px solid #777; font-size: .8em; }
 
 /* Blog */
 ul.posts { margin: 20px auto 40px; font-size: 1.5em; }
