--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ p, ul {
 }
 
 h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
-h1 { font-size: 3em;  }
+h1 { font-size: 3em; color: #777;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
