--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
       <title>{{ page.title }}</title>
       <!-- link to main stylesheet -->
       <link rel="stylesheet" type="text/css" href="/css/main.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     </head>
     <body>
       <nav>
