--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ p, ul {
   color: #333;
 }
 
-h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
+h1, h2, h3, h4 { font-family: Raleway, sans-serif; }
 h1 { font-size: 3em; color: #777;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
